Fixed gap under header
Set logo height so total header height = 40px

--- a/_sass/website/_layout.scss
+++ b/_sass/website/_layout.scss
@@ -166,7 +166,8 @@ $zindexPopovers: 1000;
         float: left;
         width: 240px;
         img {
-            width: 8em;
+            height: 32px;
+            width: auto;
         }
     }
     .nameplate {
